GNOME Bugzilla – Bug 681973
libgdm: Fix memory leaks
Last modified: 2012-08-16 19:40:35 UTC
* The xxx_new_proxy_finish() functions return a result with a reference. Account for this.
Created attachment 221350 [details] [review] libgdm: Fix memory leaks
Review of attachment 221350 [details] [review]: ::: gui/libgdm/gdm-client.c @@ +150,2 @@ + user_verifier = gdm_user_verifier_proxy_new_finish (result, &error); + if (!user_verifier) { we always use == NULL for pointers in GDM
Attachment 221350 [details] pushed as b453043 - libgdm: Fix memory leaks