libgdm: Fix memory leaks

* The xxx_new_proxy_finish() functions return a result with
   a reference. Account for this.

https://bugzilla.gnome.org/show_bug.cgi?id=681973